# stoandl-gui

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  cliff.toml
.github/workflows/: release.yml
data/: README.md  de.yoxcu.stoandl.gui.desktop  de.yoxcu.stoandl.gui.flatpak.yml  de.yoxcu.stoandl.gui.metainfo.xml
docs/: app-data.js  design-canvas.jsx  desktop.jsx  dir-calm.jsx  dir-kde.jsx  dir-phosh.jsx  icons.jsx  kde-hig.jsx  kde-states.jsx  stoandl KDE by-the-book.html  stoandl Mobile UI.html
docs/handoff/: BreezeDark-dev-preview.kdeglobals  dbus-interface.md  drift-report.md  stoandl-gui-handoff.md
packaging/: APKBUILD
qml/: AppsPage.qml  BackupSettingsPage.qml  CalendarsSettingsPage.qml  DaemonPlaceholder.qml  GeneralSettingsPage.qml  HealthPage.qml  Main.qml  NotificationsPage.qml  SettingsPage.qml  StatusChip.qml  SyncSettingsPage.qml  WatchDetailsDialog.qml  WatchPage.qml  WatchSettingsPage.qml
src/: StoandlClient.cpp  StoandlClient.h  main.cpp
tools/: mock_stoandl.py  run-with-mock.sh
